--- a/bezier/src/main/res/values-night/colors.xml
+++ b/bezier/src/main/res/values-night/colors.xml
@@ -1,319 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="textNeutral">#ccffffff</color>
-
-    <color name="textNeutralHeaviest">#ffffffff</color>
-
-    <color name="textNeutralLight">#99ffffff</color>
-
-    <color name="textNeutralLighter">#66ffffff</color>
-
-    <color name="fillNeutralHeaviest">#e5ffffff</color>
-
-    <color name="fillNeutralHeavier">#66ffffff</color>
-
-    <color name="fillNeutralHeavy">#33ffffff</color>
-
-    <color name="stateDefault">#33ffffff</color>
-
-    <color name="fillNeutralLight">#14ffffff</color>
-
-    <color name="fillNeutralLighter">#0dffffff</color>
-
-    <color name="fillNeutralLightest">#08ffffff</color>
-
-    <color name="fillNeutralTransparent">#00ffffff</color>
-
-    <color name="iconNeutral">#66ffffff</color>
-
-    <color name="iconAction">#ff6b6eff</color>
-
-    <color name="iconSuccess">#ff4bc16c</color>
-
-    <color name="iconHighlight">#ff5cadef</color>
-
-    <color name="iconWarning">#fff79847</color>
-
-    <color name="iconCritical">#fff26060</color>
-
-    <color name="iconNeutralHeavy">#99ffffff</color>
-
-    <color name="iconNeutralHeavier">#ccffffff</color>
-
-    <color name="iconAccentBlue">#ff6b6eff</color>
-
-    <color name="iconAccentCobalt">#ff5cadef</color>
-
-    <color name="iconAccentGreen">#ff4bc16c</color>
-
-    <color name="iconAccentRed">#fff26060</color>
-
-    <color name="iconAccentOrange">#fff79847</color>
-
-    <color name="iconAccentYellow">#fff0be27</color>
-
-    <color name="iconAccentOlive">#ffb7c427</color>
-
-    <color name="iconAccentTeal">#ff40d3c5</color>
-
-    <color name="iconAccentNavy">#ff6f7bc8</color>
-
-    <color name="iconAccentPurple">#ffa970ff</color>
-
-    <color name="iconAccentPink">#ffec6fd3</color>
-
-    <color name="iconAbsoluteWhite">#ffffffff</color>
-
-    <color name="borderNeutral">#1fffffff</color>
-
-    <color name="borderNeutralHeavy">#66ffffff</color>
-
-    <color name="borderDetachHighest">#ff464748</color>
-
-    <color name="borderDetachHigher">#ff313234</color>
-
-    <color name="borderAbsoluteWhite">#ffffffff</color>
-
-    <color name="fillAction">#ff6b6eff</color>
-
-    <color name="fillActionLight">#4d6b6eff</color>
-
-    <color name="fillActionLighter">#2e6b6eff</color>
-
-    <color name="fillSuccess">#ff4bc16c</color>
-
-    <color name="fillActionTransparent">#006b6eff</color>
-
-    <color name="fillSuccessLight">#4d4bc16c</color>
-
-    <color name="fillSuccessLighter">#2e4bc16c</color>
-
-    <color name="fillSuccessTransparent">#004bc16c</color>
-
-    <color name="fillHighlight">#ff5cadef</color>
-
-    <color name="fillHighlightLight">#4d5cadef</color>
-
-    <color name="fillHighlightLighter">#2e5cadef</color>
-
-    <color name="fillHighlightTransparent">#005cadef</color>
-
-    <color name="fillWarning">#fff79847</color>
-
-    <color name="fillWarningLight">#4df79847</color>
-
-    <color name="fillWarningLighter">#2ef79847</color>
-
-    <color name="fillCritical">#fff26060</color>
-
-    <color name="fillWarningTransparent">#00f79847</color>
-
-    <color name="fillCriticalLight">#4df26060</color>
-
-    <color name="fillCriticalLighter">#2ef26060</color>
-
-    <color name="fillAccentBlueHeavy">#4d6b6eff</color>
-
-    <color name="fillAccentBlueHeavier">#ff6b6eff</color>
-
-    <color name="fillAccentBlueTransparent">#006b6eff</color>
-
-    <color name="fillAccentCobaltHeavy">#4d5cadef</color>
-
-    <color name="fillCriticalTransparent">#00f26060</color>
-
-    <color name="fillAccentGreenHeavy">#4d4bc16c</color>
-
-    <color name="fillAccentRedHeavy">#4df26060</color>
-
-    <color name="fillAccentOrangeHeavy">#4df79847</color>
-
-    <color name="fillAccentBlue">#2e6b6eff</color>
-
-    <color name="fillAccentCobalt">#2e5cadef</color>
-
-    <color name="fillAccentYellowHeavy">#4df0be27</color>
-
-    <color name="fillAccentCobaltHeavier">#ff5cadef</color>
-
-    <color name="fillAccentGreen">#2e4bc16c</color>
-
-    <color name="fillAccentRed">#2ef26060</color>
-
-    <color name="fillAccentOrange">#2ef79847</color>
-
-    <color name="fillAccentOliveHeavy">#4db7c427</color>
-
-    <color name="fillAccentYellow">#2ef0be27</color>
-
-    <color name="fillAccentTealHeavy">#4d40d3c5</color>
-
-    <color name="fillAccentOlive">#2eb7c427</color>
-
-    <color name="fillAccentTeal">#2e40d3c5</color>
-
-    <color name="fillAccentGreenHeavier">#ff4bc16c</color>
-
-    <color name="fillAccentNavyHeavy">#4d6f7bc8</color>
-
-    <color name="fillAccentNavy">#2e6f7bc8</color>
-
-    <color name="fillAccentPurple">#2ea970ff</color>
-
-    <color name="fillAccentRedHeavier">#fff26060</color>
-
-    <color name="fillAccentRedTransparent">#00f26060</color>
-
-    <color name="fillAccentOrangeHeavier">#fff79847</color>
-
-    <color name="fillAccentPurpleHeavy">#4da970ff</color>
-
-    <color name="fillAccentPink">#2eec6fd3</color>
-
-    <color name="surfaceHighest">#ff464748</color>
-
-    <color name="fillAccentYellowHeavier">#fff0be27</color>
-
-    <color name="fillAccentOliveHeavier">#ffb7c427</color>
-
-    <color name="fillAccentOliveTransparent">#00b7c427</color>
-
-    <color name="fillAccentTealHeavier">#ff40d3c5</color>
-
-    <color name="fillAccentTealTransparent">#0040d3c5</color>
-
-    <color name="fillAccentNavyHeavier">#ff6f7bc8</color>
-
-    <color name="fillAccentNavyTransparent">#006f7bc8</color>
-
-    <color name="fillAccentPurpleHeavier">#ffa970ff</color>
-
-    <color name="fillAccentPurpleTransparent">#00a970ff</color>
-
-    <color name="surfaceHigher">#ff313234</color>
-
-    <color name="fillAccentPinkHeavy">#4dec6fd3</color>
-
-    <color name="fillAccentPinkHeavier">#ffec6fd3</color>
-
-    <color name="surfaceHigh">#ff2a2b2d</color>
-
-    <color name="fillAccentPinkTransparent">#00ec6fd3</color>
-
-    <color name="surfaceLow">#ff1a1a1c</color>
-
-    <color name="dimAbsoluteBlackHeavy">#99000000</color>
-
-    <color name="dimAbsoluteWhiteHeavy">#99ffffff</color>
-
-    <color name="textAction">#ff6b6eff</color>
-
-    <color name="surfaceLower">#ff000000</color>
-
-    <color name="textSuccess">#ff4bc16c</color>
-
-    <color name="textHighlight">#ff5cadef</color>
-
-    <color name="textWarning">#fff79847</color>
-
-    <color name="textCritical">#fff26060</color>
-
-    <color name="textAccentBlue">#ff6b6eff</color>
-
-    <color name="textAccentCobalt">#ff5cadef</color>
-
-    <color name="surfaceGlassHighest">#e5464748</color>
-
-    <color name="textAccentGreen">#ff4bc16c</color>
-
-    <color name="textAccentRed">#fff26060</color>
-
-    <color name="surfaceGlassHigher">#e5313234</color>
-
-    <color name="surfaceGlassHigh">#e52a2b2d</color>
-
-    <color name="surfaceGlass">#e5313234</color>
-
-    <color name="textAccentOrange">#fff79847</color>
-
-    <color name="textAccentYellow">#fff0be27</color>
-
-    <color name="textAccentOlive">#ffb7c427</color>
-
-    <color name="textAccentTeal">#ff40d3c5</color>
-
-    <color name="textAccentNavy">#ff6f7bc8</color>
-
-    <color name="textAccentPurple">#ffa970ff</color>
-
-    <color name="textAccentPink">#ffec6fd3</color>
-
-    <color name="surfaceAccentBlue">#ff6b6eff</color>
-
-    <color name="surfaceAccentCobalt">#ff5cadef</color>
-
-    <color name="surfaceAccentGreen">#ff4bc16c</color>
-
-    <color name="surfaceAccentRed">#fff26060</color>
-
-    <color name="surfaceAccentOrange">#fff79847</color>
-
-    <color name="surfaceAccentYellow">#fff0be27</color>
-
-    <color name="surfaceAccentTeal">#ff40d3c5</color>
-
-    <color name="surfaceAccentNavy">#ff6f7bc8</color>
-
-    <color name="surfaceAccentPurple">#ffa970ff</color>
-
-    <color name="surfaceAccentPink">#ffec6fd3</color>
-
-    <color name="textAbsoluteWhite">#ffffffff</color>
-
-    <color name="textAbsoluteBlack">#ff000000</color>
-
-    <color name="fillAbsoluteWhite">#ffffffff</color>
-
-    <color name="fillAbsoluteTransparent">#00ffffff</color>
-
-    <color name="fillAbsoluteBlackLight">#33000000</color>
-
-    <color name="surface">#ff242428</color>
-
-    <color name="dimAbsoluteBlack">#66000000</color>
-
-    <color name="fillAbsoluteBlackTransparent">#00000000</color>
-
-    <color name="elevationXlarge">#4d000000</color>
-
-    <color name="elevationLarge">#38000000</color>
-
-    <color name="elevationMedium">#26000000</color>
-
-    <color name="elevationSmall">#14000000</color>
-
-    <color name="elevationBase">#0d000000</color>
-
-    <color name="elevationBaseInner">#1fffffff</color>
-
-    <color name="stateAction">#ff6b6eff</color>
-
-    <color name="stateWarning">#fff79847</color>
-
-    <color name="stateActionLight">#4d6b6eff</color>
-
-    <color name="stateWarningLight">#4df79847</color>
-
-    <color name="dimAbsoluteWhite">#66ffffff</color>
-
-    <color name="borderDetachHigh">#ff2a2b2d</color>
-
-    <color name="fillAccentYellowTransparent">#00f0be27</color>
-
-    <color name="fillAccentOrangeTransparent">#00f79847</color>
-
-    <color name="fillAccentGreenTransparent">#004bc16c</color>
-
-    <color name="fillAccentCobaltTransparent">#005cadef</color>
+    <color name="text_neutral">@color/white_80</color>
+    <color name="text_neutral_heaviest">@color/white_100</color>
+    <color name="text_neutral_light">@color/white_60</color>
+    <color name="text_neutral_lighter">@color/white_40</color>
+    <color name="fill_neutral_heaviest">@color/white_90</color>
+    <color name="fill_neutral_heavier">@color/white_40</color>
+    <color name="fill_neutral_heavy">@color/white_20</color>
+    <color name="state_default">@color/white_20</color>
+    <color name="fill_neutral_light">@color/white_8</color>
+    <color name="fill_neutral_lighter">@color/white_5</color>
+    <color name="fill_neutral_lightest">@color/white_3</color>
+    <color name="fill_neutral_transparent">@color/white_0</color>
+    <color name="icon_neutral">@color/white_40</color>
+    <color name="icon_action">@color/blue_300</color>
+    <color name="icon_success">@color/green_300</color>
+    <color name="icon_highlight">@color/cobalt_300</color>
+    <color name="icon_warning">@color/orange_300</color>
+    <color name="icon_critical">@color/red_300</color>
+    <color name="icon_neutral_heavy">@color/white_60</color>
+    <color name="icon_neutral_heavier">@color/white_80</color>
+    <color name="icon_accent_blue">@color/blue_300</color>
+    <color name="icon_accent_cobalt">@color/cobalt_300</color>
+    <color name="icon_accent_green">@color/green_300</color>
+    <color name="icon_accent_red">@color/red_300</color>
+    <color name="icon_accent_orange">@color/orange_300</color>
+    <color name="icon_accent_yellow">@color/yellow_300</color>
+    <color name="icon_accent_olive">@color/olive_300</color>
+    <color name="icon_accent_teal">@color/teal_300</color>
+    <color name="icon_accent_navy">@color/navy_300</color>
+    <color name="icon_accent_purple">@color/purple_300</color>
+    <color name="icon_accent_pink">@color/pink_300</color>
+    <color name="icon_absolute_white">@color/white_100</color>
+    <color name="icon_absolute_black">@color/black_100</color>
+    <color name="border_neutral">@color/white_12</color>
+    <color name="border_neutral_heavy">@color/white_40</color>
+    <color name="border_detach_highest">@color/grey_700</color>
+    <color name="border_absolute_white">@color/white_100</color>
+    <color name="border_detach_higher">@color/grey_800</color>
+    <color name="fill_action_light">@color/blue_300_30</color>
+    <color name="fill_action">@color/blue_300</color>
+    <color name="fill_action_lighter">@color/blue_300_18</color>
+    <color name="fill_action_transparent">@color/blue_300_0</color>
+    <color name="fill_success">@color/green_300</color>
+    <color name="fill_success_light">@color/green_300_30</color>
+    <color name="fill_success_lighter">@color/green_300_18</color>
+    <color name="fill_highlight">@color/cobalt_300</color>
+    <color name="fill_success_transparent">@color/green_300_0</color>
+    <color name="fill_highlight_light">@color/cobalt_300_30</color>
+    <color name="fill_highlight_lighter">@color/cobalt_300_18</color>
+    <color name="fill_highlight_transparent">@color/cobalt_300_0</color>
+    <color name="fill_warning">@color/orange_300</color>
+    <color name="fill_warning_light">@color/orange_300_30</color>
+    <color name="fill_warning_lighter">@color/orange_300_18</color>
+    <color name="fill_warning_transparent">@color/orange_300_0</color>
+    <color name="fill_critical">@color/red_300</color>
+    <color name="fill_critical_light">@color/red_300_30</color>
+    <color name="fill_critical_lighter">@color/red_300_18</color>
+    <color name="fill_accent_blue_heavy">@color/blue_300_30</color>
+    <color name="fill_accent_blue_heavier">@color/blue_300</color>
+    <color name="fill_accent_blue_transparent">@color/blue_300_0</color>
+    <color name="fill_accent_cobalt_heavy">@color/cobalt_300_30</color>
+    <color name="fill_critical_transparent">@color/red_300_0</color>
+    <color name="fill_accent_green_heavy">@color/green_300_30</color>
+    <color name="fill_accent_red_heavy">@color/red_300_30</color>
+    <color name="fill_accent_blue">@color/blue_300_18</color>
+    <color name="fill_accent_orange_heavy">@color/orange_300_30</color>
+    <color name="fill_accent_cobalt">@color/cobalt_300_18</color>
+    <color name="fill_accent_green">@color/green_300_18</color>
+    <color name="fill_accent_yellow_heavy">@color/yellow_300_30</color>
+    <color name="fill_accent_cobalt_heavier">@color/cobalt_300</color>
+    <color name="fill_accent_red">@color/red_300_18</color>
+    <color name="fill_accent_olive_heavy">@color/olive_300_30</color>
+    <color name="fill_accent_orange">@color/orange_300_18</color>
+    <color name="fill_accent_yellow">@color/yellow_300_18</color>
+    <color name="fill_accent_olive">@color/olive_300_18</color>
+    <color name="fill_accent_teal_heavy">@color/teal_300_30</color>
+    <color name="fill_accent_green_heavier">@color/green_300</color>
+    <color name="fill_accent_teal">@color/teal_300_18</color>
+    <color name="fill_accent_navy_heavy">@color/navy_300_30</color>
+    <color name="fill_accent_navy">@color/navy_300_18</color>
+    <color name="fill_accent_purple">@color/purple_300_18</color>
+    <color name="fill_accent_red_heavier">@color/red_300</color>
+    <color name="fill_accent_red_transparent">@color/red_300_0</color>
+    <color name="fill_accent_purple_heavy">@color/purple_300_30</color>
+    <color name="fill_accent_orange_heavier">@color/orange_300</color>
+    <color name="fill_accent_pink">@color/pink_300_18</color>
+    <color name="surface_highest">@color/grey_700</color>
+    <color name="fill_accent_yellow_heavier">@color/yellow_300</color>
+    <color name="fill_accent_olive_heavier">@color/olive_300</color>
+    <color name="fill_accent_olive_transparent">@color/olive_300_0</color>
+    <color name="fill_accent_teal_heavier">@color/teal_300</color>
+    <color name="fill_accent_teal_transparent">@color/teal_300_0</color>
+    <color name="fill_accent_navy_heavier">@color/navy_300</color>
+    <color name="fill_accent_navy_transparent">@color/navy_300_0</color>
+    <color name="fill_accent_purple_heavier">@color/purple_300</color>
+    <color name="fill_accent_purple_transparent">@color/purple_300_0</color>
+    <color name="fill_accent_pink_heavy">@color/pink_300_30</color>
+    <color name="surface_higher">@color/grey_800</color>
+    <color name="surface_high">@color/grey_850</color>
+    <color name="fill_accent_pink_heavier">@color/pink_300</color>
+    <color name="fill_accent_pink_transparent">@color/pink_300_0</color>
+    <color name="surface_low">@color/grey_950</color>
+    <color name="dim_absolute_black_heavy">@color/black_60</color>
+    <color name="dim_absolute_white_heavy">@color/white_60</color>
+    <color name="text_action">@color/blue_300</color>
+    <color name="text_success">@color/green_300</color>
+    <color name="surface_lower">@color/black_100</color>
+    <color name="text_highlight">@color/cobalt_300</color>
+    <color name="text_warning">@color/orange_300</color>
+    <color name="text_critical">@color/red_300</color>
+    <color name="text_accent_blue">@color/blue_300</color>
+    <color name="text_accent_cobalt">@color/cobalt_300</color>
+    <color name="text_accent_green">@color/green_300</color>
+    <color name="surface_glass_highest">@color/grey_alpha_700_90</color>
+    <color name="text_accent_red">@color/red_300</color>
+    <color name="surface_glass_higher">@color/grey_alpha_800_90</color>
+    <color name="surface_glass_high">@color/grey_alpha_850_90</color>
+    <color name="surface_glass">@color/grey_alpha_800_90</color>
+    <color name="text_accent_orange">@color/orange_300</color>
+    <color name="text_accent_yellow">@color/yellow_300</color>
+    <color name="text_accent_olive">@color/olive_300</color>
+    <color name="text_accent_teal">@color/teal_300</color>
+    <color name="text_accent_navy">@color/navy_300</color>
+    <color name="text_accent_purple">@color/purple_300</color>
+    <color name="text_accent_pink">@color/pink_300</color>
+    <color name="surface_accent_blue">@color/blue_300</color>
+    <color name="surface_accent_cobalt">@color/cobalt_300</color>
+    <color name="surface_accent_green">@color/green_300</color>
+    <color name="surface_accent_red">@color/red_300</color>
+    <color name="surface_accent_orange">@color/orange_300</color>
+    <color name="surface_accent_yellow">@color/yellow_300</color>
+    <color name="surface_accent_olive">@color/olive_300</color>
+    <color name="surface_accent_teal">@color/teal_300</color>
+    <color name="surface_accent_navy">@color/navy_300</color>
+    <color name="surface_accent_purple">@color/purple_300</color>
+    <color name="surface_accent_pink">@color/pink_300</color>
+    <color name="text_absolute_white">@color/white_100</color>
+    <color name="text_absolute_black">@color/black_100</color>
+    <color name="fill_absolute_white">@color/white_100</color>
+    <color name="fill_absolute_white_light">@color/white_20</color>
+    <color name="fill_absolute_white_transparent">@color/white_0</color>
+    <color name="surface">@color/grey_900</color>
+    <color name="fill_absolute_black_light">@color/black_20</color>
+    <color name="dim_absolute_black">@color/black_40</color>
+    <color name="fill_absolute_black_transparent">@color/black_0</color>
+    <color name="elevation_xlarge">@color/black_30</color>
+    <color name="elevation_large">@color/black_22</color>
+    <color name="elevation_medium">@color/black_15</color>
+    <color name="elevation_small">@color/black_8</color>
+    <color name="elevation_base">@color/black_5</color>
+    <color name="elevation_base_inner">@color/white_12</color>
+    <color name="state_action">@color/blue_300</color>
+    <color name="state_warning">@color/orange_300</color>
+    <color name="state_action_light">@color/blue_300_30</color>
+    <color name="state_warning_light">@color/orange_300_30</color>
+    <color name="fill_absolute_black">@color/black_100</color>
+    <color name="dim_absolute_white">@color/white_40</color>
+    <color name="border_detach_high">@color/grey_850</color>
+    <color name="fill_accent_yellow_transparent">@color/yellow_300_0</color>
+    <color name="fill_accent_orange_transparent">@color/orange_300_0</color>
+    <color name="fill_accent_green_transparent">@color/green_300_0</color>
+    <color name="fill_accent_cobalt_transparent">@color/cobalt_300_0</color>
 </resources>
